# Media-Provider-Manager

./: .gitignore  .gitmodules  README.md  README_zh-CN.md  build.gradle  gradle.properties  gradlew  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/cpp/: CMakeLists.txt  bpf_hook.cpp  bpf_hook.h  logging.h  plugin.cpp
app/src/main/res/animator/: alpha_animator.xml  stateful_button_animator.xml
app/src/main/res/drawable/: afs_md2_thumb.xml  ic_baseline_audiotrack_108.xml  ic_baseline_error_24.xml  ic_baseline_insert_drive_file_108.xml  ic_baseline_videocam_108.xml  ic_outline_add_24.xml  ic_outline_apps_24.xml  ic_outline_audiotrack_24.xml  ic_outline_close_24.xml  ic_outline_history_24.xml  ic_outline_image_24.xml  ic_outline_info_24.xml  ic_outline_insert_drive_file_24.xml  ic_outline_insert_photo_24.xml  ic_outline_more_horiz_24.xml  ic_outline_save_alt_24.xml  ic_outline_science_24.xml  ic_outline_screen_rotation_24.xml  ic_outline_service_settings_24.xml  ic_outline_settings_24.xml  ic_outline_share_24.xml  ic_outline_tune_24.xml  ic_outline_videocam_24.xml  images_shortcut_icon_foreground.xml  item_background_button.xml
app/src/main/res/layout/: about_fragment.xml  app_fragment.xml  app_header.xml  appbar.xml  applist_activity.xml  applist_fragment.xml  applist_item.xml  cat_carousel_item.xml  coming_soon_fragment.xml  design_bottom_bar_item.xml  design_navigation_item.xml  drawer_activity.xml  drawer_content.xml  drawer_nav_header.xml  exo_player_control_view.xml  exo_styled_player_control_view.xml  experiment_card_action.xml  experiment_card_header.xml  experiment_card_subheader.xml  experiment_fragment.xml  files_header.xml  files_item.xml  gallery_fragment.xml  gallery_item.xml  home_activity.xml  home_button.xml  home_card.xml  home_card_button.xml  home_content.xml  home_nav_header.xml  image_fragment.xml  image_item.xml  image_pager_fragment.xml  image_pager_item.xml  images_fragment.xml  images_item.xml  media_store_fragment.xml  module_fragment.xml  pager_fragment.xml  path_list_dialog.xml  (+16 more)
app/src/main/res/layout-v28/: applist_item.xml  home_card.xml  home_card_button.xml
app/src/main/res/menu/: app_item.xml  applist_toolbar.xml  drawer_drawer.xml  experiment_content.xml  files_toolbar.xml  home_drawer.xml  image_pager_bottombar.xml  image_pager_toolbar.xml  images_toolbar.xml  item_delete.xml  item_delete_all_rules.xml  mediastore_actionmode.xml  menu_applist.xml  (+6 more)
gradle/wrapper/: gradle-wrapper.properties
(+411 files in other folders)
